# openivi-html5

./: .gitignore  CMakeLists.txt  README.md  allowlocation_webpage.cc  allowlocation_webpage.h  car.cc  car.h  config.h.in  installdetail.cc  installdetail.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  onboard.xml  packageid.cc  packageid.h  softwareloadingmanager.cc  softwareloadingmanager.h  softwareloadingmanager.xml  softwareloadingmanagerdbus.h  virtualkeyboard.cc  virtualkeyboard.h  webgraphicview.cc  webgraphicview.h
example/: demo.html
example/cluster/: index.html  main.js  style.css
resources/: resources.qrc  speeds.txt  welcome.html
